--- a/src/component/moveList/index.css
+++ b/src/component/moveList/index.css
@@ -4,3 +4,12 @@
   margin: 0 -3%;
   height: 600px;
 }
+
+/* @media  screen and (max-width: 548px){
+
+  .image-link{
+    width: 8% !important;
+  }
+
+
+} */
